Added technical SEO details like robots and sitemap, added metadata to public pages.

--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Wealth Group. Get answers here.">
+  <link rel="canonical" href="https://exceptional-website.vercel.app/faq.html">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Exceptional Wealth Group">
+  <meta property="og:title" content="FAQ | Exceptional Wealth Group — Wealth Management for Athletes">
+  <meta property="og:description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Wealth Group. Get answers here.">
+  <meta property="og:url" content="https://exceptional-website.vercel.app/faq.html">
+  <meta property="og:image" content="https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="FAQ | Exceptional Wealth Group — Wealth Management for Athletes">
+  <meta name="twitter:description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Wealth Group. Get answers here.">
+  <meta name="twitter:image" content="https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg">
   <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
@@ -15,6 +26,63 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
   </script>
   <script defer src="/_vercel/insights/script.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FinancialService",
+      "name": "Exceptional Wealth Group",
+      "url": "https://exceptional-website.vercel.app/",
+      "image": "https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg",
+      "description": "Wealth management and financial planning tailored to professional athletes, from NIL through retirement.",
+      "areaServed": "US",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Lake Oswego",
+        "addressRegion": "OR",
+        "addressCountry": "US"
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What makes athlete wealth management different from regular wealth management?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Athletes typically earn most of their lifetime income in a short career window and face unique issues like multi-state taxes, public visibility, and career transition planning."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is a fiduciary, and why does it matter?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "A fiduciary is obligated to act in your best interest. Exceptional Wealth Group operates as a fee-only fiduciary and does not earn commissions from product sales."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do multi-state taxes work for professional athletes?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Athletes can owe taxes in multiple states based on where games and duties occur. Coordinated planning helps manage filing complexity, estimates, and credits."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is NIL financial planning?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "NIL financial planning helps student-athletes manage taxable brand income, set tax reserves, evaluate deals, and build long-term financial habits before turning pro."
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 <body class="page-faq">
 
