--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exceptional Wealth Group | Wealth Management for Athletes</title>
   <meta name="description" content="Portland's premier wealth management firm dedicated to professional athletes. Navigate your unique financial journey with expert guidance from NIL through retirement.">
+  <link rel="canonical" href="https://exceptional-website.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Exceptional Wealth Group">
+  <meta property="og:title" content="Exceptional Wealth Group | Wealth Management for Athletes">
+  <meta property="og:description" content="Portland's premier wealth management firm dedicated to professional athletes. Navigate your unique financial journey with expert guidance from NIL through retirement.">
+  <meta property="og:url" content="https://exceptional-website.vercel.app/">
+  <meta property="og:image" content="https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Exceptional Wealth Group | Wealth Management for Athletes">
+  <meta name="twitter:description" content="Portland's premier wealth management firm dedicated to professional athletes. Navigate your unique financial journey with expert guidance from NIL through retirement.">
+  <meta name="twitter:image" content="https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg">
   <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
@@ -15,6 +26,23 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
   </script>
   <script defer src="/_vercel/insights/script.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FinancialService",
+      "name": "Exceptional Wealth Group",
+      "url": "https://exceptional-website.vercel.app/",
+      "image": "https://exceptional-website.vercel.app/assets/exceptional-logo-gold.svg",
+      "description": "Wealth management and financial planning tailored to professional athletes, from NIL through retirement.",
+      "areaServed": "US",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Lake Oswego",
+        "addressRegion": "OR",
+        "addressCountry": "US"
+      }
+    }
+  </script>
 </head>
 <body>
 
