updated athlete education section

--- a/athlete-education.html
+++ b/athlete-education.html
@@ -76,7 +76,7 @@
     <div class="section-container">
       <p class="section-eyebrow">Athlete Education</p>
       <h1 class="page-hero-title">Understand the Financial Issues Athletes Face Most</h1>
-      <p class="page-hero-subtitle">Use the dropdown topics below for clear, practical guidance on athlete-specific planning issues. Each topic covers what the issue is, why it matters, and common mistakes to avoid.</p>
+      <p class="page-hero-subtitle">Start with the planning issue that can cost you the most this season. Each section is built for athletes and focused on decisions you can act on right away.</p>
       <div class="education-hero-cta">
         <a href="contact.html" class="btn btn-primary btn-lg">Schedule a Consultation</a>
       </div>
@@ -127,123 +127,143 @@
   <section class="education-issues-section">
     <div class="section-container">
       <div class="section-header">
-        <p class="section-eyebrow">Interactive Topics</p>
-        <h2 class="section-title">Open the Topics Most Relevant to You</h2>
-        <p class="section-subtitle">Each dropdown includes the issue, why it matters, how we approach it, and common mistakes we see.</p>
+        <p class="section-eyebrow">Case Study Scenarios</p>
+        <h2 class="section-title">Start With What Impacts This Season's Money First</h2>
+        <p class="section-subtitle">Three focused scenario groups. Click any bullet-tab to reveal a condensed breakdown of the issue and what execution usually requires.</p>
       </div>
 
-      <div class="education-topic-accordion">
-        <details class="education-topic" open>
-          <summary>
-            <span class="education-topic-title">Jock Tax and Multi-State Filings</span>
-            <span class="education-topic-tag">Tax</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Income may be apportioned across states based on where games and duties happen.</p>
-            <p><strong>Why it matters:</strong> Without planning, estimated taxes and withholding can create avoidable penalties and liquidity stress.</p>
-            <p><strong>How we help:</strong> We coordinate strategy and timing with your CPA so tax obligations are anticipated and organized.</p>
-            <ul>
-              <li>Common mistake: waiting until year-end to map filing exposure.</li>
-              <li>Common mistake: assuming one-state withholding solves everything.</li>
-            </ul>
-          </div>
-        </details>
+      <p class="education-reading-hint">Click any bullet to expand a condensed scenario, stakes, approach, and common misses.</p>
 
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">NIL Income and Quarterly Tax Planning</span>
-            <span class="education-topic-tag">NIL</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> NIL and brand income often arrives as 1099 compensation with no tax withheld.</p>
-            <p><strong>Why it matters:</strong> Irregular cash inflows can lead to over-spending before tax liabilities are funded.</p>
-            <p><strong>How we help:</strong> We build reserve policies and payment cadences aligned to your income and filing calendar.</p>
-            <ul>
-              <li>Common mistake: treating gross deal value as spendable cash.</li>
-              <li>Common mistake: ignoring quarterly estimate deadlines.</li>
-            </ul>
+      <div class="education-subsections">
+        <article class="education-subsection education-subsection--tax" data-education-subsection>
+          <div class="education-subsection-head">
+            <h3>Income and Tax Exposure</h3>
+            <p>This is where athletes most often lose money early: taxes are reactive, income is irregular, and decisions happen too quickly.</p>
           </div>
-        </details>
+          <div class="education-subsection-body">
+            <p class="education-case-list-label">Scenarios</p>
+            <ul class="education-case-list" aria-label="Income and Tax Exposure scenarios">
+              <li><button type="button" class="education-case-trigger is-active" data-case-target="case-nil-quarterly" aria-controls="case-nil-quarterly" aria-expanded="true">NIL Income and Quarterly Tax Planning</button></li>
+              <li><button type="button" class="education-case-trigger" data-case-target="case-jock-tax" aria-controls="case-jock-tax" aria-expanded="false">Jock Tax and Multi-State Filings</button></li>
+              <li><button type="button" class="education-case-trigger" data-case-target="case-endorsement-1099" aria-controls="case-endorsement-1099" aria-expanded="false">Endorsement and 1099 Income Structuring</button></li>
+            </ul>
+            <div class="education-case-panel-wrap">
+              <article class="education-case-panel is-active" id="case-nil-quarterly" data-case-panel>
+                <h4>NIL Income and Quarterly Tax Planning</h4>
+                <p><strong>Scenario:</strong> NIL income lands as 1099 cash with no withholding.</p>
+                <p><strong>Stakes:</strong> Tax liabilities show up later, after spending patterns are already set.</p>
+                <p><strong>Condensed approach:</strong> Set reserve percentages by income type and tie payments to fixed quarterly checkpoints.</p>
+                <ul>
+                  <li>Common miss: treating gross NIL receipts as spendable.</li>
+                  <li>Common miss: skipping estimated payment dates.</li>
+                </ul>
+              </article>
+              <article class="education-case-panel" id="case-jock-tax" data-case-panel>
+                <h4>Jock Tax and Multi-State Filings</h4>
+                <p><strong>Scenario:</strong> Games, travel, and appearances create filing obligations in multiple states.</p>
+                <p><strong>Stakes:</strong> Late mapping of exposures can cause penalties and cash-flow stress.</p>
+                <p><strong>Condensed approach:</strong> Build a season-long state map early and coordinate projections with your CPA.</p>
+                <ul>
+                  <li>Common miss: waiting until year-end to reconcile state income.</li>
+                  <li>Common miss: assuming one-state withholding solves the full picture.</li>
+                </ul>
+              </article>
+              <article class="education-case-panel" id="case-endorsement-1099" data-case-panel>
+                <h4>Endorsement and 1099 Income Structuring</h4>
+                <p><strong>Scenario:</strong> Deal income timing, expenses, and contract terms vary across partnerships.</p>
+                <p><strong>Stakes:</strong> Net after-tax outcomes can underperform headline values.</p>
+                <p><strong>Condensed approach:</strong> Model net economics before signing and standardize documentation for every deal.</p>
+                <ul>
+                  <li>Common miss: signing before reviewing after-tax cash flow.</li>
+                  <li>Common miss: ad hoc records that increase tax friction later.</li>
+                </ul>
+              </article>
+            </div>
+          </div>
+        </article>
 
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">Signing Bonus and Cash Reserve Strategy</span>
-            <span class="education-topic-tag">Cash Flow</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Large one-time deposits require structured allocation across taxes, liquidity, and long-term assets.</p>
-            <p><strong>Why it matters:</strong> Early misallocation can reduce flexibility and increase pressure later.</p>
-            <p><strong>How we help:</strong> We set staged allocation rules that protect near-term liquidity and long-term plan integrity.</p>
-            <ul>
-              <li>Common mistake: making major commitments before reserve funding.</li>
-              <li>Common mistake: no defined short-term liquidity target.</li>
-            </ul>
+        <article class="education-subsection education-subsection--risk" data-education-subsection>
+          <div class="education-subsection-head">
+            <h3>Liquidity and Downside Protection</h3>
+            <p>Strong years can still create instability if reserves, downside planning, and household governance are not built early.</p>
           </div>
-        </details>
+          <div class="education-subsection-body">
+            <p class="education-case-list-label">Scenarios</p>
+            <ul class="education-case-list" aria-label="Liquidity and Downside Protection scenarios">
+              <li><button type="button" class="education-case-trigger is-active" data-case-target="case-signing-bonus" aria-controls="case-signing-bonus" aria-expanded="true">Signing Bonus and Cash Reserve Strategy</button></li>
+              <li><button type="button" class="education-case-trigger" data-case-target="case-injury-risk" aria-controls="case-injury-risk" aria-expanded="false">Injury Risk and Career Volatility</button></li>
+              <li><button type="button" class="education-case-trigger" data-case-target="case-family-boundaries" aria-controls="case-family-boundaries" aria-expanded="false">Family Support Boundaries and Governance</button></li>
+            </ul>
+            <div class="education-case-panel-wrap">
+              <article class="education-case-panel is-active" id="case-signing-bonus" data-case-panel>
+                <h4>Signing Bonus and Cash Reserve Strategy</h4>
+                <p><strong>Scenario:</strong> A large deposit arrives before tax obligations and long-term priorities are fully mapped.</p>
+                <p><strong>Stakes:</strong> Early commitments can reduce flexibility for seasons that follow.</p>
+                <p><strong>Condensed approach:</strong> Split cash immediately into tax reserve, operating liquidity, and long-term allocation buckets.</p>
+                <ul>
+                  <li>Common miss: major spending before reserve funding is complete.</li>
+                  <li>Common miss: no defined minimum liquidity target.</li>
+                </ul>
+              </article>
+              <article class="education-case-panel" id="case-injury-risk" data-case-panel>
+                <h4>Injury Risk and Career Volatility</h4>
+                <p><strong>Scenario:</strong> Availability and role can shift quickly in professional sports.</p>
+                <p><strong>Stakes:</strong> Income plans based on best-case assumptions can fail under stress.</p>
+                <p><strong>Condensed approach:</strong> Layer protection planning with downside cash-flow models and clear spending guardrails.</p>
+                <ul>
+                  <li>Common miss: insurance decisions made without full-plan context.</li>
+                  <li>Common miss: no scenario model for reduced or interrupted earnings.</li>
+                </ul>
+              </article>
+              <article class="education-case-panel" id="case-family-boundaries" data-case-panel>
+                <h4>Family Support Boundaries and Governance</h4>
+                <p><strong>Scenario:</strong> Support requests often increase as income becomes visible.</p>
+                <p><strong>Stakes:</strong> Generosity without structure can conflict with long-term priorities.</p>
+                <p><strong>Condensed approach:</strong> Define decision rights, support policies, and review rules before requests become urgent.</p>
+                <ul>
+                  <li>Common miss: open-ended commitments with no boundaries.</li>
+                  <li>Common miss: inconsistent approval process across requests.</li>
+                </ul>
+              </article>
+            </div>
+          </div>
+        </article>
 
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">Endorsement and 1099 Income Structuring</span>
-            <span class="education-topic-tag">Business</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Endorsement income can involve variable timing, expenses, and entity-level decisions.</p>
-            <p><strong>Why it matters:</strong> Poor documentation and ad hoc structure can increase tax friction and execution risk.</p>
-            <p><strong>How we help:</strong> We coordinate with legal and tax advisors so contracts and income flows stay decision-ready.</p>
-            <ul>
-              <li>Common mistake: signing deals without modeling net-after-tax outcomes.</li>
-              <li>Common mistake: no standardized documentation process.</li>
-            </ul>
+        <article class="education-subsection education-subsection--legacy" data-education-subsection>
+          <div class="education-subsection-head">
+            <h3>Post-Career and Legacy Readiness</h3>
+            <p>This phase is less about peak income and more about durability, governance, and sustaining your family plan over decades.</p>
           </div>
-        </details>
-
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">Injury Risk, Protection, and Career Volatility</span>
-            <span class="education-topic-tag">Risk</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Sports careers carry higher interruption risk than most professions.</p>
-            <p><strong>Why it matters:</strong> A sudden change in availability or role can impact both income and long-term planning assumptions.</p>
-            <p><strong>How we help:</strong> We integrate risk mitigation and contingency planning into your full financial strategy.</p>
-            <ul>
-              <li>Common mistake: protection planning done in isolation from overall financial plan.</li>
-              <li>Common mistake: no downside scenario cash-flow model.</li>
+          <div class="education-subsection-body">
+            <p class="education-case-list-label">Scenarios</p>
+            <ul class="education-case-list" aria-label="Post-Career and Legacy Readiness scenarios">
+              <li><button type="button" class="education-case-trigger is-active" data-case-target="case-post-career" aria-controls="case-post-career" aria-expanded="true">Post-Career Transition Planning</button></li>
+              <li><button type="button" class="education-case-trigger" data-case-target="case-legacy-governance" aria-controls="case-legacy-governance" aria-expanded="false">Family Governance and Decision Rights</button></li>
             </ul>
+            <div class="education-case-panel-wrap">
+              <article class="education-case-panel is-active" id="case-post-career" data-case-panel>
+                <h4>Post-Career Transition Planning</h4>
+                <p><strong>Scenario:</strong> Active-income cadence ends while lifestyle and family obligations continue.</p>
+                <p><strong>Stakes:</strong> Plans built only for peak earning years can underdeliver in retirement.</p>
+                <p><strong>Condensed approach:</strong> Rebuild the plan around sustainable withdrawal rates, tax efficiency, and realistic spending horizons.</p>
+                <ul>
+                  <li>Common miss: delaying transition planning until final seasons.</li>
+                  <li>Common miss: retirement lifestyle assumptions not stress-tested.</li>
+                </ul>
+              </article>
+              <article class="education-case-panel" id="case-legacy-governance" data-case-panel>
+                <h4>Family Governance and Decision Rights</h4>
+                <p><strong>Scenario:</strong> More capital and more stakeholders increase complexity in household decisions.</p>
+                <p><strong>Stakes:</strong> Without governance, execution slows and priorities drift over time.</p>
+                <p><strong>Condensed approach:</strong> Set roles, escalation paths, and recurring decision checkpoints tied to your long-term plan.</p>
+                <ul>
+                  <li>Common miss: no written framework for who decides what.</li>
+                  <li>Common miss: support expectations not aligned with long-term targets.</li>
+                </ul>
+              </article>
+            </div>
           </div>
-        </details>
-
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">Family Support Boundaries and Governance</span>
-            <span class="education-topic-tag">Governance</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Financial requests from family and friends can increase quickly as income rises.</p>
-            <p><strong>Why it matters:</strong> Without structure, generosity can conflict with personal goals and long-term sustainability.</p>
-            <p><strong>How we help:</strong> We help define clear support frameworks and decision rules aligned with your priorities.</p>
-            <ul>
-              <li>Common mistake: major ongoing commitments without boundaries.</li>
-              <li>Common mistake: no process for evaluating requests consistently.</li>
-            </ul>
-          </div>
-        </details>
-
-        <details class="education-topic">
-          <summary>
-            <span class="education-topic-title">Post-Career Transition Planning</span>
-            <span class="education-topic-tag">Long-Term</span>
-          </summary>
-          <div class="education-topic-content">
-            <p><strong>What it is:</strong> Transitioning from competition changes income sources, schedule, and planning priorities.</p>
-            <p><strong>Why it matters:</strong> Plans built only for peak years can underperform after retirement.</p>
-            <p><strong>How we help:</strong> We model sustainable income and align investments, tax strategy, and spending to post-career life.</p>
-            <ul>
-              <li>Common mistake: delaying transition planning until final seasons.</li>
-              <li>Common mistake: lifestyle assumptions not stress-tested for retirement horizon.</li>
-            </ul>
-          </div>
-        </details>
+        </article>
       </div>
 
       <p class="education-disclaimer">Educational information only. Planning and tax implementation should be coordinated with your CPA, attorney, and advisory team.</p>
