--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
               </div>
               <div class="expect-item">
                 <div class="expect-number">3</div>
-                <p>We'll discuss your situation, answer your questions, and determine if we're the right fit — no pressure either way.</p>
+                <p>We'll discuss your situation, answer your questions, and determine if we're the right fit.</p>
               </div>
             </div>
           </div>
